# kg

./: .claude  .envrc  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  kg.toml  pyproject.toml  setup.py  shell.sh  start.sh  stop.sh
.github/workflows/: auto-release.yml
.kg/: .gitignore
.kg/.claude/: settings.json
.kg/agents/: genral.toml  improve-web.toml  test.toml  web.toml
.kg/nodes/_fleeting-04c93c0b-c29/: node.jsonl
.kg/nodes/_fleeting-05f82afa-7ee/: node.jsonl
.kg/nodes/_fleeting-082912c0-503/: node.jsonl
.kg/nodes/_fleeting-0a65e606-817/: node.jsonl
.kg/nodes/_fleeting-0bfee517-1e7/: node.jsonl
.kg/nodes/_fleeting-0d9cb235-baa/: node.jsonl
.kg/nodes/_fleeting-0f5c3e22-317/: node.jsonl
.kg/nodes/_fleeting-117163f8-e95/: node.jsonl
.kg/nodes/_fleeting-17023ba5-807/: node.jsonl
.kg/nodes/_fleeting-17b1f004-a18/: node.jsonl
.kg/nodes/_fleeting-1867b093-2b2/: node.jsonl
.kg/nodes/_fleeting-228e7058-a58/: node.jsonl
.kg/nodes/_fleeting-23575edf-c4e/: node.jsonl
.kg/nodes/_fleeting-2407f7d1-43f/: node.jsonl
.kg/nodes/_fleeting-293abee7-446/: node.jsonl
.kg/nodes/_fleeting-29c43661-cf1/: node.jsonl
.kg/nodes/_fleeting-302d8e31-a6f/: node.jsonl
.kg/nodes/_fleeting-317d6492-efc/: node.jsonl
.kg/nodes/_fleeting-32895a29-6ec/: node.jsonl
.kg/nodes/_fleeting-34bf502f-637/: node.jsonl
.kg/nodes/_fleeting-4a6053b7-5be/: node.jsonl
.kg/nodes/_fleeting-532e0279-d73/: node.jsonl
.kg/nodes/_fleeting-577e2125-5a1/: meta.json  node.jsonl
.kg/nodes/_fleeting-6841bbe9-dce/: node.jsonl
.kg/nodes/_fleeting-6fb9df06-a75/: node.jsonl
.kg/nodes/_fleeting-70d1f62a-02d/: node.jsonl
.kg/nodes/_fleeting-7e02233f-ab5/: node.jsonl
.kg/nodes/_fleeting-7ec9996c-e72/: node.jsonl
.kg/nodes/_fleeting-8354ee01-027/: node.jsonl
.kg/nodes/_fleeting-8b19628b-fc5/: node.jsonl
.kg/nodes/_fleeting-8db83720-1f6/: node.jsonl
.kg/nodes/_fleeting-92418090-0fa/: node.jsonl
.kg/nodes/_fleeting-9448a558-add/: node.jsonl
.kg/nodes/_fleeting-9785ea30-4c9/: node.jsonl
.kg/nodes/_fleeting-9c7cb67c-b50/: node.jsonl
.kg/nodes/_fleeting-a2af0b34-134/: node.jsonl
.kg/nodes/_fleeting-a30e9a3b-65e/: node.jsonl
.kg/nodes/_fleeting-a8bed403-52f/: node.jsonl
.kg/nodes/_fleeting-adc0d96d-e1f/: node.jsonl
.kg/nodes/_fleeting-ae7dee38-eb9/: node.jsonl
.kg/nodes/_fleeting-b1ccd496-76d/: node.jsonl
.kg/nodes/_fleeting-bf9b5260-f8f/: node.jsonl
.kg/nodes/_fleeting-c1ef086c-b1f/: node.jsonl
.kg/nodes/_fleeting-c4eec2ab-394/: node.jsonl
.kg/nodes/_fleeting-ca2867f2-6c6/: node.jsonl
.kg/nodes/_fleeting-cd2252ad-bc3/: node.jsonl
.kg/nodes/_fleeting-ce226572-641/: node.jsonl
.kg/nodes/_fleeting-cf0f4272-7a8/: node.jsonl
.kg/nodes/_fleeting-d79e99f8-cf6/: node.jsonl
.kg/nodes/_fleeting-d8de2edc-3a5/: node.jsonl
.kg/nodes/_fleeting-e45a8e52-67c/: node.jsonl
.kg/nodes/_fleeting-e4947cf3-376/: node.jsonl
.kg/nodes/_fleeting-e5b22355-e58/: node.jsonl
.kg/nodes/_fleeting-e795a3c6-7b5/: node.jsonl
.kg/nodes/_fleeting-e8790cf6-952/: node.jsonl
.kg/nodes/_fleeting-eaa2edd8-0c5/: node.jsonl
.kg/nodes/_fleeting-edb82576-27b/: node.jsonl
.kg/nodes/_fleeting-f7966391-aeb/: node.jsonl
.kg/nodes/_fleeting-f99dd794-9ff/: node.jsonl
.kg/nodes/agent/: meta.json  node.jsonl
.kg/nodes/agent-delegation/: meta.json  node.jsonl
.kg/nodes/agent-genral/: node.jsonl
.kg/nodes/agent-genral-mission/: node.jsonl
.kg/nodes/agent-improve-web/: meta.json  node.jsonl
.kg/nodes/agent-improve-web-mission/: meta.json  node.jsonl
.kg/nodes/agent-test/: meta.json  node.jsonl
.kg/nodes/agent-test-mission/: meta.json  node.jsonl
.kg/nodes/agent-testbot/: meta.json  node.jsonl
.kg/nodes/agent-testcreate123/: meta.json  node.jsonl
.kg/nodes/agent-testfullcreate2/: meta.json  node.jsonl
.kg/nodes/agent-web/: meta.json  node.jsonl
.kg/nodes/agent-web-mission/: meta.json  node.jsonl
.kg/nodes/bullet-quality/: meta.json  meta.jsonl  node.jsonl
.kg/nodes/fleeting-notes/: meta.json  meta.jsonl  node.jsonl
docs/: kg-reference.typ
scripts/: release.py
src/kg/: __init__.py  bootstrap.py  cli.py  config.py  context.py  daemon.py  db.py  embedder.py  file_indexer.py  indexer.py  install.py  mcp.py  models.py  reader.py  reranker.py  transcript.py  vector_client.py  vector_server.py  watcher.py  web.py
src/kg/agents/: cli.py  (+4 more)
(+54 files in other folders)
