[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kg"
version = "0.1.0"
description = "Lightweight knowledge graph: JSONL files, SQLite index, inotify watcher"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
embeddings = [
    "openai",
]
watch = [
    "inotify-simple",
]
dev = [
    "ruff",
    "basedpyright",
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # docstrings optional
    "COM812",   # trailing comma (conflicts with formatter)
    "ISC001",
    "SLF001",   # private member access OK in tests
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
