[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kg"
version = "0.3.14"
description = "Lightweight knowledge graph: JSONL files, SQLite index, inotify watcher"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "diskcache>=5.6",
    "fastembed>=0.4",
    "fastmcp>=2.0",
    "google-genai>=1.0",
    "inotify-simple>=1.3; sys_platform == 'linux'",
    "numpy>=1.26",
    "rich>=13.0",
]

[project.optional-dependencies]
turso = [
    "libsql",
]
dev = [
    "ruff",
    "basedpyright",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
kg = "kg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kg = [
    "_vendor/fastcdc/*.pyx",
    "_vendor/fastcdc/*.py",
    ".kg/skills/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # docstrings optional
    "COM812",   # trailing comma (conflicts with formatter)
    "ISC001",
    "SLF001",   # private member access OK in tests
    "FBT001", "FBT002",  # boolean positional/default args OK in small CLIs
    "S603", "S607",  # subprocess with trusted (non-user-input) paths OK
    "TRY003", "EM101", "EM102",  # exception message style OK
    "T201",     # print() OK in CLI tools
    "PLR2004",  # magic values OK where meaning is clear from context
    "ANN401",   # Any annotations OK
    "C901", "PLR0912", "PLR0913", "PLR0915",  # complexity in build_context is acceptable
    "TRY300",   # return-in-else-of-try is clear
    "BLE001",   # broad except OK in explicit guard clauses (budget update, watcher)
    "SIM102",   # nested if OK
    "PERF401",  # list-comprehension not always clearer than explicit loop
    "E501",     # line length managed by ruff format
    "PLW2901",  # loop variable shadowing OK (e.g. building paths)
    "PLC0415",  # import not at top level - intentional for lazy optional deps
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = false      # optional deps (numpy, fastembed, diskcache, google-genai) not installed
reportMissingTypeStubs = false    # many third-party packages lack stubs
reportAttributeAccessIssue = false  # google.genai dynamic attributes
